# CertSleuth

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  security-audit.md  security.md  tailwind.config.js
.claude/: launch.json
.github/workflows/: ci.yml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/catalog/: admin.py  compat.py  models.py  urls.py  views.py
apps/core/: crypto.py  domains.py  middleware.py  sitemaps.py  staleness.py  urls.py  views.py
apps/offers/: admin.py  apps.py  models.py  urls.py  (+1 more)
config/: settings.py  urls.py
docs/: backlog.md  crawl-procedure.md  gcp-setup.md  handoff.md  spec.md
scripts/: backup.sh  seed_sources.py
templates/: base.html  landing.html  robots.txt
tests/: conftest.py  settings_test.py  test_approver_perms.py  test_catalog_browse.py  test_claim_ordering.py  test_crawl.py  test_credly_import.py  test_crypto.py  test_discovery.py  test_extractors.py  test_gmail_execution.py  test_gmail_scan.py  test_importers.py  test_ingest.py  test_input_hardening.py  test_landing.py  test_login_lockout.py  test_offers.py  test_planned_certs.py  test_publish.py  test_publish_credit_rule.py  test_render_classification.py  test_rls.py  test_schemas.py  test_settings_env.py  test_submission_history.py  test_tasks.py  test_worker_autoextract.py  test_worker_render_wiring.py
worker/: CLAUDE.md  claude_worker.py  crawl.py  extractors.py  local_extract.py  render.py  schema.py
(+86 files in other folders)
